--- a/index.html
+++ b/index.html
@@ -1,7 +1,182 @@
 <!DOCTYPE html>
 <html>
-<title> hi </title>
-<body>
-<h1>Hi</h1>
-</body>
+    <head>
+        <title>Ryan Chu</title>
+        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" crossorigin="anonymous">
+        <link href="style.css" rel="stylesheet">
+    </head>
+    <!-- https://www.thetouchagency.co.uk/branding/ -->
+    <body data-theme='light'>
+        <div class="container-fluid fullHeight">
+            <div class="row fullHeight">
+                <div class="col d-flex flex-column align-items-center from-left-animation">
+                    <div class="side-col">
+                        <div class="d-flex flex-column align-items-center side-col-content">                         
+                            <button class="theme-toggle" id="theme-toggle" title="Toggles light & dark" aria-label="auto" aria-live="polite">
+                                <svg class="sun-and-moon" aria-hidden="true" width="24" height="24" viewBox="0 0 24 24">
+                                  <mask class="moon" id="moon-mask">
+                                    <rect x="0" y="0" width="100%" height="100%" fill="white" />
+                                    <circle cx="24" cy="10" r="6" fill="black" />
+                                  </mask>
+                                  <circle class="sun" cx="12" cy="12" r="6" mask="url(#moon-mask)" fill="currentColor" />
+                                  <g class="sun-beams" stroke="currentColor">
+                                    <line x1="12" y1="1" x2="12" y2="3" />
+                                    <line x1="12" y1="21" x2="12" y2="23" />
+                                    <line x1="4.22" y1="4.22" x2="5.64" y2="5.64" />
+                                    <line x1="18.36" y1="18.36" x2="19.78" y2="19.78" />
+                                    <line x1="1" y1="12" x2="3" y2="12" />
+                                    <line x1="21" y1="12" x2="23" y2="12" />
+                                    <line x1="4.22" y1="19.78" x2="5.64" y2="18.36" />
+                                    <line x1="18.36" y1="5.64" x2="19.78" y2="4.22" />
+                                   </g>
+                                </svg>
+                              </button>
+
+                            <div class="left-vertical-line"></div>
+                            <ul class="socials">
+                                <li><i class="icon-link fa-brands fa-linkedin fa-2x"></i></li>
+                                <li><i class="icon-link fa-brands fa-github fa-2x"></i></li>
+                            </ul>
+                        </div>
+                    </div>                    
+                </div>
+                <div class="col-9 fullHeight">
+                    <div class="row intro">
+                        <div class="col-6">
+                            <p>
+                                Hello!
+                                Lorem ipsum dolor sit amet, consect
+                            </p>
+                        </div>
+                        <div class="col-6">
+                            <img src="yes2.png">
+                            <img src="miyako.gif">
+                        </div>
+                    </div>
+
+                    <div id="cards_landscape_wrap-2">
+                        <div class="row">
+                            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+                                <a href="">
+                                    <div class="card-flyer">
+                                        <div class="text-box">
+                                            <div class="image-box">
+                                                <img src="https://cdn.pixabay.com/photo/2018/03/30/15/11/deer-3275594_960_720.jpg" alt="" />
+                                            </div>
+                                            <div class="text-container">
+                                                <h6>Title 01</h6>
+                                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+                                <a href="">
+                                    <div class="card-flyer">
+                                        <div class="text-box">
+                                            <div class="image-box">
+                                                <img src="https://cdn.pixabay.com/photo/2018/04/09/19/55/low-poly-3305284_960_720.jpg" alt="" />
+                                            </div>
+                                            <div class="text-container">                                    
+                                                <h6>Title 02</h6>
+                                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+                                <a href="">
+                                    <div class="card-flyer">
+                                        <div class="text-box">
+                                            <div class="image-box">
+                                                <img src="https://cdn.pixabay.com/photo/2018/04/06/13/46/poly-3295856_960_720.png" alt="" />
+                                            </div>
+            
+                                            <div class="text-container">
+                                                <h6>Title 03</h6>
+                                               <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+                                <a href="">
+                                    <div class="card-flyer">
+                                        <div class="text-box">
+                                            <div class="image-box">
+                                                <img src="https://cdn.pixabay.com/photo/2018/03/30/15/12/dog-3275593_960_720.jpg" alt="" />
+                                            </div>
+                                            <div class="text-container">
+                                                <h6>Title 04</h6>
+                                               <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                            
+                        </div>
+                </div>
+ 
+ 
+                </div>
+                <div class="col d-flex flex-column align-items-center from-right-animation">           
+                    <div class="side-col">
+                        <div class="d-flex flex-column align-items-center side-col-content">
+                            <div class="vertical-nav">
+                                <ul>
+                                    <li>
+                                        <a href="" class="gradient-text">Home</a>
+                                    </li>
+                                    <li>
+                                        <a href="" class="gradient-text">Stuff</a>
+                                    </li>
+                                    <li>
+                                        <a href="" class="gradient-text">About</a>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="right-vertical-line"></div>
+                        </div>
+                    </div>  
+                </div>
+            </div>
+        </div>
+    </body>
+    <script>
+        const theme = {
+            value: 'light',
+        }
+        const reflectPreference = () => {
+            document.body
+                .setAttribute('data-theme', theme.value)
+
+            document
+                .querySelector('#theme-toggle')
+                ?.setAttribute('aria-label', theme.value)
+        }
+        const onClick = () => {
+        // flip current value
+        theme.value = theme.value === 'light'
+            ? 'dark'
+            : 'light'
+
+            reflectPreference()
+        }
+        window.onload = () => {
+        // set on load so screen readers can see latest value on the button
+        // reflectPreference()
+
+        // now this script can find and listen for clicks on the control
+        document
+            .querySelector('#theme-toggle')
+            .addEventListener('click', onClick)
+        }
+    </script>
 </html>
